# butler-pipeliner

./: .pre-commit-config.yaml  README.md  pyproject.toml
core/models/: param.py  step.py  task.py
tests/: _base.py  test_task.py
tests/data/task_files/: line_thinner.yml  thin_line_and_reduce_points.yml
